# miller-mzml-filterer

./: .gitignore  Dockerfile  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/miller/: __init__.py  chromatogram.py  cli.py  codec.py  errors.py  models.py  reader.py  selector.py  validation.py  writer.py
test_data/: test_data.mzML
tests/: conftest.py  test_chromatogram.py  test_chromatogram_edges.py  test_cli.py  test_codec.py  test_reader.py  test_reader_edges.py  test_roundtrip.py  test_selector.py  test_smoke_real_data.py  test_validation.py  test_writer.py  test_writer_edges.py
tests/fixtures/: generate_fixtures.py  sample_indexed.mzML  sample_nonindexed.mzML
