[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miller"
version = "0.1.0"
description = "Miller: generate small representative mzML subsets for testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Miller" }]
dependencies = [
  "click>=8.1",
  "pyteomics>=4.6",
  "lxml>=5.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
miller = "miller.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["miller"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*"]
ignore_missing_imports = true
